Updated 'faq.html' via CloudCannon

--- a/faq.html
+++ b/faq.html
@@ -2,12 +2,10 @@
 faq:
   - question: What is the Maker Lab?
     answer: The Maker Lab is a free resource to create cool stuff.
-  - question: What is front matter?
+  - question: Where are you located?
     answer: >-
-      The front matter is where Jekyll starts to get really cool. Any file that
-      contains a YAML front matter block will be processed by Jekyll as a
-      special file. The front matter must be the first thing in the file and
-      must take the form of valid YAML set between triple-dashed lines
+      The Maker Lab has several locations, but the main one is on the 3rd floor
+      of Harold Washington Library.
   - question: What is a static file?
     answer: >-
       A static file is a file that does not contain any YAML front matter. These
