--- a/search.html
+++ b/search.html
@@ -26,5 +26,5 @@ sitemap: false
 		{% endfor %}
 	};
 </script>
-<script src="{{ site.baseurl }}/js/lunr.min.js"></script>
-<script src="{{ site.baseurl }}/js/search.js"></script>
+<script src="{{ site.baseurl }}/assets/js/lunr.min.js"></script>
+<script src="{{ site.baseurl }}/assets/js/search.js"></script>
