Updated 'learn.html' via CloudCannon

--- a/learn.html
+++ b/learn.html
@@ -1,6 +1,8 @@
 ---
 ---
 
+{% include search.html %}
+
 <section class="categories">
 	{% assign categories = site.categories | sort %}
 	{% for category in categories %}
