--- a/learn.html
+++ b/learn.html
@@ -3,6 +3,7 @@
 
 <section class="categories">
 	{% assign categories = site.categories | sort %}
+	{{ site.categories | json }}
 	{% for category in categories %}
 		{% assign name = category[0] %}
 		{% assign posts = category[1] %}
