--- a/learn.html
+++ b/learn.html
@@ -2,6 +2,7 @@
 ---
 
 <section class="categories">
+    {{ site.collections | where: "label", "guides" | first }}
 	{% assign categories = site.categories | sort %}
 	{% for category in categories %}
 		{% assign name = category[0] %}
