--- a/learn.html
+++ b/learn.html
@@ -2,7 +2,7 @@
 ---
 
 <section class="categories">
-	{% assign categories = site.guides | map: 'categories' | uniq %} 
+	{% assign categories = site.categories %} 
 
 	{% for category in categories %}
 		{% assign name = category[0] %}
