--- a/learn.html
+++ b/learn.html
@@ -2,7 +2,8 @@
 ---
 
 <section class="categories">
-	{% assign categories = site.categories %} 
+	{% assign categories =  site.guides | map: 'categories' | uniq %}
+
 
 	{% for category in categories %}
 		{% assign name = category[0] %}
