--- a/learn.html
+++ b/learn.html
@@ -2,23 +2,18 @@
 ---
 
 <section class="categories">
-	{% assign categories =  site.guides | map: 'categories' | uniq %}
+    {% assign groups = site.guides | group_by: "category" | sort: "name" %}
 
-
-	{% for category in categories %}
-		{% assign name = category[0] %}
-		{% assign posts = category[1] %}
-		{% assign size = posts | size %}
+    {% for group in groups %}
+		{% assign name = group.name %}
+		{% assign posts = group.items %}
+		{% assign size = guides | size %}
 		<section class="category">
 				<h3>
 					<a href="{{ site.baseurl }}/category/{{ name | slugify }}/">{{ name | replace: "-", " " }}</a>
 				</h3>
 
 			<ul>
-				{% assign tutorials = posts | sort: "title" %}
-				{% for tutorial in tutorials limit: 4 %}
-					<li><a href="{{ site.baseurl }}{{ tutorial.url }}">{% include document-icon.html icon=tutorial.type %}{{ tutorial.title }}</a></li>
-				{% endfor %}
 				{% if size > 4 %}
 					<li><a href="{{ site.baseurl }}/category/{{ name | slugify }}/">{{ size | minus: 4 }} more...</a></li>
 				{% endif %}
