Updated 'learn.html' via CloudCannon

--- a/learn.html
+++ b/learn.html
@@ -3,7 +3,13 @@
 
 <section class="categories">
     {% assign groups = site.guides | group_by: "categories" | sort: "name" %}
-    {{ site.collections | json}}
+{% for group in groups %}
+    {{ group.name }}
+    {% for item in group.items %}
+        {{item.abbrev}}
+    {%endfor%}
+{%endfor%}
+
     {% for group in groups %}
 		{% assign name = group.name %}
 		{% assign posts = group.items %}
