Updated 'learn.html' via CloudCannon

--- a/learn.html
+++ b/learn.html
@@ -4,9 +4,26 @@
 <section class="categories">
     {% assign groups = site.guides | group_by: "categories" | sort: "name" %}
 
-
+    
     {% for guide in site.guides %}
-        {{ guide.title }}
+       {{ guide.title | JSON }}
     {% endfor %}
 
+
+    {% for group in groups %}
+		{% assign name = group.name %}
+		{% assign posts = group.items %}
+		{% assign size = group.items | size %}
+		<section class="category">
+				<h3>
+					<a href="{{ site.baseurl }}/category/{{ name | slugify }}/">{{ name | replace: "-", " " }}</a>
+				</h3>
+
+			<ul>
+				{% if size > 4 %}
+					<li><a href="{{ site.baseurl }}/category/{{ name | slugify }}/">{{ size | minus: 4 }} more...</a></li>
+				{% endif %}
+			</ul>
+		</section>
+	{% endfor %}
 </section>
