--- a/learn.html
+++ b/learn.html
@@ -2,24 +2,21 @@
 ---
 
 <section class="categories">
-    {% assign groups = site.guides | group_by: "categories" | sort: "name" %}
-
-
-    {% for guide in site.guides %}
-       {{ guide.title }}
-    {% endfor %}
-
-
-    {% for guide in site.guides %}
-		{% assign name = guide.title %}
-		{% assign posts = guide.items %}
-		{% assign size = guide.items | size %}
+	{% assign categories = site.categories | sort %}
+	{% for category in categories %}
+		{% assign name = category[0] %}
+		{% assign posts = category[1] %}
+		{% assign size = posts | size %}
 		<section class="category">
 				<h3>
 					<a href="{{ site.baseurl }}/category/{{ name | slugify }}/">{{ name | replace: "-", " " }}</a>
 				</h3>
 
 			<ul>
+				{% assign tutorials = guides | sort: "title" %}
+				{% for tutorial in tutorials limit: 4 %}
+					<li><a href="{{ site.baseurl }}{{ tutorial.url }}">{% include document-icon.html icon=tutorial.type %}{{ tutorial.title }}</a></li>
+				{% endfor %}
 				{% if size > 4 %}
 					<li><a href="{{ site.baseurl }}/category/{{ name | slugify }}/">{{ size | minus: 4 }} more...</a></li>
 				{% endif %}
