--- a/learn.html
+++ b/learn.html
@@ -13,7 +13,7 @@
 				</h3>
 
 			<ul>
-				{% assign tutorials = guides | sort: "title" %}
+				{% assign tutorials = site.guides | sort: "title" %}
 				{% for tutorial in tutorials limit: 4 %}
 					<li><a href="{{ site.baseurl }}{{ tutorial.url }}">{% include document-icon.html icon=tutorial.type %}{{ tutorial.title }}</a></li>
 				{% endfor %}
