--- a/learn.html
+++ b/learn.html
@@ -2,21 +2,25 @@
 ---
 
 <section class="categories">
-	{% assign categories = site.categories | sort %}
-	{% for category in categories %}
-		{% assign name = category[0] %}
-		{% assign posts = category[1] %}
-		{% assign size = posts | size %}
+    {% assign collection  = site.guides %}
+    {% assign groups = site.guides | group_by: "categories" | sort: "name" %}
+
+
+    {% for guide in site.guides %}
+        <a href="{{ guide.url }}">{{ guide.title }}</a>
+    {% endfor %}
+
+
+    {% for group in groups %}
+		{% assign name = group.name %}
+		{% assign posts = group.items %}
+		{% assign size = group.items | size %}
 		<section class="category">
 				<h3>
 					<a href="{{ site.baseurl }}/category/{{ name | slugify }}/">{{ name | replace: "-", " " }}</a>
 				</h3>
 
 			<ul>
-				{% assign tutorials = site.guides | map: "categories" | sort: "title" %}
-				{% for tutorial in tutorials limit: 4 %}
-					<li><a href="{{ site.baseurl }}{{ tutorial.url }}">{% include document-icon.html icon=tutorial.type %}{{ tutorial.title }}</a></li>
-				{% endfor %}
 				{% if size > 4 %}
 					<li><a href="{{ site.baseurl }}/category/{{ name | slugify }}/">{{ size | minus: 4 }} more...</a></li>
 				{% endif %}
