--- a/learn.html
+++ b/learn.html
@@ -7,11 +7,12 @@
 
 
     {% for guide in site.guides %}
+        <a href="{{ guide.url }}">{{ guide.title }}</a>
     {% endfor %}
 
 
     {% for group in groups %}
-		{% assign name = group.name %}
+		{% assign name = group.title %}
 		{% assign posts = group.items %}
 		{% assign size = group.items | size %}
 		<section class="category">
