--- a/learn.html
+++ b/learn.html
@@ -15,7 +15,7 @@
 			<ul>
 				{% assign tutorials = posts | sort: "title" %}
 				{% for tutorial in tutorials limit: 4 %}
-					<li><a href="{{ site.baseurl }}{{ tutorial.url }}">{% include document-icon.html icon=tutorial.type %}{{ tutorial.title }}</a></li>
+					<li><a href="{{ site.baseurl }}{{ tutorial.url }}"><i class="fa fa-file" aria-hidden="true"></i>{{ tutorial.title }}</a></li>
 				{% endfor %}
 				{% if size > 4 %}
 					<li><a href="{{ site.baseurl }}/category/{{ name | slugify }}/">{{ size | minus: 4 }} more...</a></li>
