--- a/learn.html
+++ b/learn.html
@@ -9,7 +9,7 @@
    {{ guides | json }}
    {% if guides.size > 0 %}
 		<section class="category">
-			<h2>{{ topic }} ({{guides.size}})</h2>
+			<h3 name="{{topic}}">{{ topic }} ({{guides.size}})</h3>
 			<ul>
 			  {% for guide in guides %}
 			    <li><a href="{{ guide.url }}">{{ guide.title }}</a></li>
