--- a/learn.html
+++ b/learn.html
@@ -6,10 +6,10 @@
 
   {% for topic in topics %}
    {% assign guides = site.guides | where:"topics",topic %}
-   {{ guides | json }}
-   {% if guides.size > 0 %}
+   {% assign size = site.guides.size | where:"topics",topic %}
+   {% if size > 0 %}
 		<section class="category">
-			<h3 name="{{topic}}">{{ topic }} ({{guides.size}})</h3>
+			<h3 name="{{topic}}">{{ topic }} ({{size}})</h3>
 			<ul>
 			  {% for guide in guides %}
 			    <li><a href="{{ guide.url }}">{{ guide.title }}</a></li>
