--- a/learn.html
+++ b/learn.html
@@ -6,7 +6,7 @@
 
   {% for topic in topics %}
    {% assign guides = site.guides | where:"topics",topic %}
-   {% assign size = site.guides.size | where:"topics",topic %}
+   {% assign size = guides | size %}
    {% if size > 0 %}
 		<section class="category">
 			<h3 name="{{topic}}">{{ topic }} ({{size}})</h3>
