Updated 'learn.html' via CloudCannon

--- a/learn.html
+++ b/learn.html
@@ -7,7 +7,7 @@ layout: default
 <section class="row topics">
   <div class="col-sm-2">
 
-    <div class="content-nav">
+    <div class="jump-nav">
       <h3>Content</h3>
       <ul>
       {% for topic in topics %}
