--- a/search.html
+++ b/search.html
@@ -8,7 +8,7 @@ sitemap: false
 
 <script>
 	window.data = {
-		{% for post in site.posts %}
+		{% for post in site.guides %}
 			{% if post.title %}
 				{% unless post.excluded_in_search %}
 					{% if added %},{% endif %}
