Updated '_pages/learn.html' via CloudCannon

--- a/_pages/learn.html
+++ b/_pages/learn.html
@@ -9,7 +9,7 @@ header_image: uploads/coding.jpg
   <div class="col-sm-4">
 
     <div class="jump-nav">
-      <h3>Content</h3>
+      <h3>Topics</h3>
       <ul>
       {% for topic in topics %}
        {% assign guides = site.guides | where:"topics",topic %}
