--- a/_pages/learn.html
+++ b/_pages/learn.html
@@ -12,7 +12,7 @@ header_image: uploads/coding.jpg
       <h3>Topics</h3>
       <ul>
       {% for topic in topics %}
-       {% assign guides = site.guides | where:"topics",topic %}
+       {% assign guides = site.guides | where:"topic",topic %}
        {% if guides.size > 0 %}
     			<li><a href="#{{ topic }}">{{ topic }}</a></li>
     		{% endif %}
@@ -24,7 +24,7 @@ header_image: uploads/coding.jpg
   <div class="col-sm-8">
     
     {% for topic in topics %}
-     {% assign guides = site.guides | where:"topics",topic %}
+     {% assign guides = site.guides | where:"topic",topic %}
      {% if guides.size > 0 %}
   		<section class="category">
   			<h4>{{ topic }}<a name="{{topic}}"></a></h4>
