Updated '_site_pages/search.html' via CloudCannon

--- a/_site_pages/search.html
+++ b/_site_pages/search.html
@@ -8,7 +8,8 @@ sitemap: false
 
 <script>
 	window.data = {
-		{% for post in site.guides %}
+	  {% assign searchable = site.guides | concat: site.pages | concat: site.posts %}
+		{% for post in searchable %}
 			{% if post.title %}
 				{% unless post.excluded_in_search %}
 					{% if added %},{% endif %}
