--- a/_site_pages/learn.html
+++ b/_site_pages/learn.html
@@ -23,7 +23,9 @@ header_image: uploads/coding.jpg
   </div>
   <div class="col-sm-8">
     <div id="guide-list">
-      <input placeholder="Filter..." class="search listjs-search" />
+      <div class="listjs-search">
+        <input placeholder="Filter..." class="search" />
+      </div>
       <div class="list">
         {% for topic in topics %}
          {% assign guides = site.guides | where:"topic",topic %}
