--- a/_site_pages/learn.html
+++ b/_site_pages/learn.html
@@ -24,7 +24,7 @@ header_image: uploads/coding.jpg
   <div class="col-sm-8">
     <div id="guide-list">
       <div class="listjs-search">
-        <input placeholder="Filter..." class="search" />
+        <input placeholder="Filter..." class="search" /> <i class="fa fa-search"></i>
       </div>
       <div class="list">
         {% for topic in topics %}
