--- a/_site_pages/blog.html
+++ b/_site_pages/blog.html
@@ -3,15 +3,17 @@ title: Blog
 header_image: 
 ---
 
+<div class"latest-post">
 {% for post in site.posts limit:1 %}
   <h2><a href="{{ post.url }}">{{ post.title }}</a></h2>
   {{ post.excerpt }}
+  <a class="read-more button" href="{{ post.url }}">Read more</a>
 {% endfor %}
+</div>
 
-<h1>Older Posts</h1>
+<h3>Older Posts</h3>
 {% for post in site.posts offset:1%}
     <li>
       <a href="{{ post.url }}">{{ post.title }}</a>
-      {{ post.excerpt }}
     </li>
 {% endfor %}
