--- a/_site_pages/blog.html
+++ b/_site_pages/blog.html
@@ -7,9 +7,11 @@ header_image:
 {% for post in site.posts limit:1 %}
   <h2><a href="{{ post.url }}">{{ post.title }}</a></h2>
   {{ post.excerpt }}
-  <a class="read-more button" href="{{ post.url }}">Read more</a>
+  <a class="read-more" href="{{ post.url }}">Read more</a>
 {% endfor %}
 </div>
+
+<hr>
 
 <h3>Older Posts</h3>
 {% for post in site.posts offset:1%}
