--- a/_site_pages/slidedecks.html
+++ b/_site_pages/slidedecks.html
@@ -7,7 +7,7 @@ title: Slide Decks
  {% if decks.size > 0 %}
 		<ul class="slidedecks">
 		  {% for deck in decks %}
-		    <li><a target="_blank" href="{{ deck.url }}"><i class="fa fa-window-maximize"></i> {{ deck.title }}</a></li>
+		    <li><i class="fa fa-photo"></i> <a target="_blank" href="{{ deck.url }}">{{ deck.title }}</a></li>
 		  {% endfor %}
 		</ul>
 	{% endif %}
