--- a/_site_pages/guides.html
+++ b/_site_pages/guides.html
@@ -12,7 +12,7 @@ header_image: uploads/coding.jpg
       <h3>Topics</h3>
       <ul>
       {% for topic in topics %}
-       {% assign guides = site.guides | where:"category",topic %}
+       {% assign guides = site.guides | where:"categories",topic %}
        {% if guides.size > 0 %}
     			<li><a href="#{{ topic }}">{{ topic }}</a></li>
     		{% endif %}
@@ -28,7 +28,7 @@ header_image: uploads/coding.jpg
       </div>
       <div class="list">
         {% for topic in topics %}
-         {% assign guides = site.guides | where:"category",topic %}
+         {% assign guides = site.guides | where:"categories",topic %}
          {% if guides.size > 0 %}
       		<section class="category">
       			<h4 class="topic">{{ topic }}<a name="{{topic}}"></a></h4>
