Updated '_site_pages/guides.html' via CloudCannon

--- a/_site_pages/guides.html
+++ b/_site_pages/guides.html
@@ -11,8 +11,9 @@ header_image: uploads/coding.jpg
     <div class="jump-nav">
       <h3>Topics</h3>
       <ul>
-      {% for category in categories %}
+      {% for category in site.categories %}
        {% assign topic = category | first %}
+       {{ category | json }}
        {% assign guides = site.guides | where:"category",topic %}
        {% if guides.size > 0 %}
     			<li><a href="#{{ topic }}">{{ topic }}</a></li>
