--- a/_site_pages/guides.html
+++ b/_site_pages/guides.html
@@ -4,7 +4,7 @@ header_image: uploads/coding.jpg
 ---
 {% assign topics = [] %}
 
-{% assign groups = site.guides | group_by: "categories" | sort: "name" %}
+{% assign groups = site.guides | group_by: "categories" %}
 {% for group in groups %}
   
   {% if group.name.size > 0 %}
