Updated '_site_pages/guides.html' via CloudCannon

--- a/_site_pages/guides.html
+++ b/_site_pages/guides.html
@@ -8,7 +8,7 @@ header_image: uploads/coding.jpg
 {% for group in groups %}
   
   {% if group.name.size > 0 %}
-    {% site.topics | push group.name%}
+    {{ group.name }}
   {% endif %}
 {%endfor%}
 
