--- a/_site_pages/guides.html
+++ b/_site_pages/guides.html
@@ -2,15 +2,17 @@
 title: Guides
 header_image: uploads/coding.jpg
 ---
-{% assign topics = [] %}
-
-{% assign groups = site.guides | group_by_exp: "categories", "categories | first" | sort: "name" %}
-{% for group in groups %}
-  
-  {% if group.name.size > 0 %}
-    {{ group.name }}
-  {% endif %}
-{%endfor%}
+<ul>
+{% for category in site.categories %}
+  <li><a name="{{ category | first }}">{{ category | first }}</a>
+    <ul>
+    {% for post in category.last %}
+      <li><a href="{{ post.url }}">{{ post.title }}</a></li>
+    {% endfor %}
+    </ul>
+  </li>
+{% endfor %}
+</ul>
 
 <section class="row topics">
   <div class="col-sm-4">
