Updated '_site_pages/guides.html' via CloudCannon

--- a/_site_pages/guides.html
+++ b/_site_pages/guides.html
@@ -7,7 +7,7 @@ header_image: uploads/coding.jpg
   <li><a name="{{ category | first }}">{{ category | first }}</a>
     <ul>
     {% for post in category.last %}
-     
+      <li><a href="{{ post.url }}">{{ post.title }}</a></li>
     {% endfor %}
     </ul>
   </li>
