Updated '_site_pages/guides.html' via CloudCannon

--- a/_site_pages/guides.html
+++ b/_site_pages/guides.html
@@ -7,8 +7,8 @@ header_image: uploads/coding.jpg
 {% assign groups = site.guides | group_by: "categories" | sort: "name" %}
 
 {% for group as groups %}
-  {% assign name = group.name | remove "[" | remove "]" | strip | append "," %}
-  {% assign topics = topics | append name %}
+{{ group.name }}
+
 {% endfor %}
 
 {% assign topics = topics | split "," %}
