Updated '_site_pages/guides.html' via CloudCannon

--- a/_site_pages/guides.html
+++ b/_site_pages/guides.html
@@ -6,9 +6,9 @@ header_image: uploads/coding.jpg
 
 {% assign groups = site.guides | group_by: "categories" | sort: "name" %}
 
-{% for group as groups %}
-{{ group.name }}
-
+{% for group in groups %}
+  {% assign name = group.name | remove "[" | remove "]" | strip | append "," %}
+  {% assign topics = topics | append name %}
 {% endfor %}
 
 {% assign topics = topics | split "," %}
