--- a/_site_pages/guides.html
+++ b/_site_pages/guides.html
@@ -2,15 +2,13 @@
 title: Guides
 header_image: uploads/coding.jpg
 ---
-{% assign topics = "" %}
-
 {% assign groups = site.guides | group_by: "categories" | sort: "name" %}
 
 {% for group in groups %}
-
+  {% assign name = group.name | remove "[" | remove "]" | strip | append "," %}
+  {{ name }}
 {% endfor %}
 
-{% assign topics = topics | split "," %}
 
 <section class="row topics">
   <div class="col-sm-4">
