--- a/_site_pages/guides.html
+++ b/_site_pages/guides.html
@@ -3,6 +3,37 @@ title: Guides
 header_image: uploads/coding.jpg
 ---
 
+
+<section class="categories">
+    {% assign collection  = site.guides %}
+    {% assign groups = site.guides | group_by: "categories" | sort: "name" %}
+
+
+
+    {% for guide in site.guides %}
+        <a href="{{ guide.url }}">{{ guide.title }}</a>
+    {% endfor %}
+
+
+    {% for group in groups %}
+		{% assign name = group.title %}
+		{% assign posts = group.items %}
+		{% assign size = group.items | size %}
+		<section class="category">
+				<h3>
+					<a href="{{ site.baseurl }}/category/{{ name | slugify }}/">{{ name | replace: "-", " " }}</a>
+				</h3>
+
+			<ul>
+				{% if size > 4 %}
+					<li><a href="{{ site.baseurl }}/category/{{ name | slugify }}/">{{ size | minus: 4 }} more...</a></li>
+				{% endif %}
+			</ul>
+		</section>
+	{% endfor %}
+</section>
+
+
 <section class="row topics">
   <div class="col-sm-4">
 
