--- a/_site_pages/guides.html
+++ b/_site_pages/guides.html
@@ -3,11 +3,16 @@ title: Guides
 header_image: uploads/coding.jpg
 ---
 
-	{% for category in categories %}
-		{% assign name = category[0] %}
-   {{ name }}
-	{% endfor %}
+{% assign topics = "" %}
 
+{% assign groups = site.guides | group_by: "categories" | sort: "name" %}
+
+{% for group in groups %}
+  {% assign name = group.name | remove "[" | remove "]" | strip | append "," %}
+  {% assign topics = topics | append name %}
+{% endfor %}
+
+{% assign topics = topics | split "," %}
 
 <section class="row topics">
   <div class="col-sm-4">
