Updated '_site_pages/guides.html' via CloudCannon

--- a/_site_pages/guides.html
+++ b/_site_pages/guides.html
@@ -3,7 +3,7 @@ title: Guides
 header_image: uploads/coding.jpg
 ---
 
-{% assign topics = "" %}
+{% assign topics = "," %}
 
 {% assign groups = site.guides | group_by: "categories" | sort: "name" %}
 
