Updated '_site_pages/guides.html' via CloudCannon

--- a/_site_pages/guides.html
+++ b/_site_pages/guides.html
@@ -4,10 +4,10 @@ header_image: uploads/coding.jpg
 ---
 
 
-{% assign groups = site.guides | group_by: "categories" | sort: "name" %}
+{% assign groups = site.guides | group_by_exp: "categories" | sort: "name" %}
 
 {% for group in groups %}
- {{ group.name }}
+ {{ group.name | remove ["[", "]"] }}
 {% endfor %}
 
 
