--- a/_site_pages/guides.html
+++ b/_site_pages/guides.html
@@ -7,7 +7,7 @@ header_image: uploads/coding.jpg
 {% assign groups = site.guides | group_by_exp: "categories" | sort: "name" %}
 
 {% for group in groups %}
- {{ group.name | remove ["[", "]"] }}
+ {{ group.name | remove "[" }}
 {% endfor %}
 
 
