Updated '_site_pages/guides.html' via CloudCannon

--- a/_site_pages/guides.html
+++ b/_site_pages/guides.html
@@ -4,11 +4,17 @@ header_image: uploads/coding.jpg
 ---
 
 
-{% assign groups = site.guides | group_by_exp: "categories" | sort: "name" %}
+{% assign topics = "," %}
+
+{% assign groups = site.guides | group_by: "categories" | sort: "name" %}
 
 {% for group in groups %}
- {{ group.name | remove "[" }}
+  {% assign name = group.name | remove: "[" | remove: "]" | strip | append "," %}
+  {% assign topics = topics | append name %}
 {% endfor %}
+
+{% assign topics = topics | split "," %}
+
 
 
 <section class="row topics">
