Updated '_site_pages/guides.html' via CloudCannon

--- a/_site_pages/guides.html
+++ b/_site_pages/guides.html
@@ -9,11 +9,12 @@ header_image: uploads/coding.jpg
 {% assign groups = site.guides | group_by: "categories" | sort: "name" %}
 
 {% for group in groups %}
-  {% assign name = group.name | remove: "[" | remove: "]" | strip | append "," %}
-  {% assign topics = topics | append name %}
+  {% assign name = group.name %}
+  {% assign name = name  | remove: "[" | remove: "]" | strip | append: "," %}
+  {% assign topics = topics | append: name %}
 {% endfor %}
 
-{% assign topics = topics | split "," %}
+{% assign topics = topics | split: "," %}
 
 
 
