--- a/_site_pages/guides.html
+++ b/_site_pages/guides.html
@@ -10,6 +10,7 @@ header_image: uploads/coding.jpg
 
 {% for group in groups %}
   {% assign name = group.name  | remove: "[" | remove: "]" | strip | append: "," %}
+  {{ name }}
   {% assign topics = topics | append: name %}
 {% endfor %}
 
