Updated '_site_pages/guides.html' via CloudCannon

--- a/_site_pages/guides.html
+++ b/_site_pages/guides.html
@@ -9,7 +9,7 @@ header_image: uploads/coding.jpg
 {% assign groups = site.guides | group_by: "categories" | sort: "name" %}
 
 {% for group in groups %}
-  {% assign name = group.name  | remove: "[" | remove: "]" | strip | append: "," %}
+  {% assign name = group.name  | remove: "[\"" | remove: "\"]" | strip | append: "," %}
   {{ name }}
   {% assign topics = topics | append: name %}
 {% endfor %}
