Updated '_site_pages/guides.html' via CloudCannon

--- a/_site_pages/guides.html
+++ b/_site_pages/guides.html
@@ -16,7 +16,7 @@ header_image: uploads/coding.jpg
 
 {% assign topics = topics | split: "," %}
 
-
+{{ topics | json }}
 
 <section class="row topics">
   <div class="col-sm-4">
