--- a/_site_pages/guides.html
+++ b/_site_pages/guides.html
@@ -13,7 +13,7 @@ header_image: uploads/coding.jpg
 {% endfor %}
 
 {% assign topics = topics | split: "," %}
-
+{{ topics | json }}
 
 <section class="row topics">
   <div class="col-sm-4">
