Updated '_site_pages/guides.html' via CloudCannon

--- a/_site_pages/guides.html
+++ b/_site_pages/guides.html
@@ -14,6 +14,7 @@ header_image: uploads/coding.jpg
 
 {% assign topics = topics | split: "," %}
 
+
 <section class="row topics">
   <div class="col-sm-4">
 
@@ -22,7 +23,9 @@ header_image: uploads/coding.jpg
       <ul>
       {% for topic in topics %}
        {% assign guides = site.guides | where:"categories",topic %}
+       {% if guides.size > 0 %}
     			<li><a href="#{{ topic }}">{{ topic }}</a></li>
+    		{% endif %}
     	{% endfor %}
   	  </ul>
   	</div>
@@ -36,6 +39,7 @@ header_image: uploads/coding.jpg
       <div class="list">
         {% for topic in topics %}
          {% assign guides = site.guides | where:"categories",topic %}
+         {% if guides.size > 0 %}
       		<section class="category">
       			<h4 class="topic">{{ topic }}<a name="{{topic}}"></a></h4>
       			<ul>
@@ -44,6 +48,7 @@ header_image: uploads/coding.jpg
       			  {% endfor %}
       			</ul>
       		</section>
+      		{% endif %}
       	{% endfor %} 
     	</div>
     </div>
