--- a/_site_pages/guides.html
+++ b/_site_pages/guides.html
@@ -8,6 +8,7 @@ header_image: uploads/coding.jpg
 {% assign groups = site.guides | group_by: "categories" | sort: "name" %}
 
 {% for group in groups %}
+  {{ groups | json }}
   {% assign name = group.name  | remove: '["' | remove: '"]' | strip | append: "," %}
   {% assign topics = topics | append: name %}
 {% endfor %}
