--- a/_site_pages/guides.html
+++ b/_site_pages/guides.html
@@ -5,7 +5,7 @@ header_image: uploads/coding.jpg
 
 {% assign topics = "," %}
 
-{% assign groups = site.guides | group_by: "categories" | sort: "name" %}
+{% assign groups = site.guides | group_by_exp: "categories", "categories | first" | sort: "name" %}
 
 {% for group in groups %}
   {{ groups | json }}
