--- a/_site_pages/guides.html
+++ b/_site_pages/guides.html
@@ -5,10 +5,10 @@ header_image: uploads/coding.jpg
 
 {% assign topics = "," %}
 
-{% assign groups = site.guides | group_by_exp: "categories", "categories | first" | sort: "name" %}
+{% assign groups = site.guides | group_by: "categories" | sort: "name" %}
+{{ groups | inspect }}
 
 {% for group in groups %}
-  {{ groups | json }}
   {% assign name = group.name  | remove: '["' | remove: '"]' | strip | append: "," %}
   {% assign topics = topics | append: name %}
 {% endfor %}
